changed currency table to have a count column, drops datagridview working, started dynamic hotkey settings

--- a/src/Gumshoe Maps/app.config
+++ b/src/Gumshoe Maps/app.config
@@ -41,6 +41,15 @@
       <setting name="zanaQuantity" serializeAs="String">
         <value>0</value>
       </setting>
+      <setting name="mapHotkey" serializeAs="String">
+        <value>113</value>
+      </setting>
+      <setting name="zanaHotkey" serializeAs="String">
+        <value>114</value>
+      </setting>
+      <setting name="cartoHotkey" serializeAs="String">
+        <value>115</value>
+      </setting>
     </Gumshoe_Maps.Properties.Settings>
   </userSettings>
 </configuration>
