--- a/src/Gumshoe Maps/Properties/Settings.settings
+++ b/src/Gumshoe Maps/Properties/Settings.settings
@@ -8,5 +8,14 @@
     <Setting Name="zanaQuantity" Type="System.Int32" Scope="User">
       <Value Profile="(Default)">0</Value>
     </Setting>
+    <Setting Name="mapHotkey" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">113</Value>
+    </Setting>
+    <Setting Name="zanaHotkey" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">114</Value>
+    </Setting>
+    <Setting Name="cartoHotkey" Type="System.Int32" Scope="User">
+      <Value Profile="(Default)">115</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
