Starting the details form to allow for manual map operations and to view better details.

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,14 @@
 /src/packages/EntityFramework.6.1.1
 src/Gumshoe Maps.v12.suo
+src/Gumshoe Maps/obj/Debug/Gumshoe_Maps.Details.resources
+src/Gumshoe Maps/obj/Release/DesignTimeResolveAssemblyReferences.cache
+src/Gumshoe Maps/obj/Release/DesignTimeResolveAssemblyReferencesInput.cache
+src/Gumshoe Maps/obj/Release/Gumshoe Maps.csproj.FileListAbsolute.txt
+src/Gumshoe Maps/obj/Release/Gumshoe Maps.csproj.GenerateResource.Cache
+src/Gumshoe Maps/obj/Release/Gumshoe Maps.csprojResolveAssemblyReference.cache
+src/Gumshoe Maps/obj/Release/Gumshoe Maps.pdb
+src/Gumshoe Maps/obj/Release/Gumshoe_Maps.Details.resources
+src/Gumshoe Maps/obj/Release/Gumshoe_Maps.Main.resources
+src/Gumshoe Maps/obj/Release/Gumshoe_Maps.Properties.Resources.resources
+src/Gumshoe Maps/obj/Release/Gumshoe_Maps.Settings.resources
+src/Gumshoe Maps/obj/Release/Gumshoe_Maps.TitleBar.resources
