--- a/src/Gumshoe Maps/app.config
+++ b/src/Gumshoe Maps/app.config
@@ -36,7 +36,7 @@
   <userSettings>
     <Gumshoe_Maps.Properties.Settings>
       <setting name="themeColor" serializeAs="String">
-        <value>Gold</value>
+        <value>SkyBlue</value>
       </setting>
       <setting name="zanaQuantity" serializeAs="String">
         <value>0</value>
@@ -49,6 +49,9 @@
       </setting>
       <setting name="cartoHotkey" serializeAs="String">
         <value>115</value>
+      </setting>
+      <setting name="selectedLeague" serializeAs="String">
+        <value />
       </setting>
     </Gumshoe_Maps.Properties.Settings>
   </userSettings>
