--- a/src/Gumshoe Maps/Gumshoe Maps.csproj
+++ b/src/Gumshoe Maps/Gumshoe Maps.csproj
@@ -55,6 +55,7 @@
       <HintPath>..\packages\System.Data.SQLite.Linq.1.0.94.1\lib\net40\System.Data.SQLite.Linq.dll</HintPath>
     </Reference>
     <Reference Include="System.Design" />
+    <Reference Include="System.Web.Extensions" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -80,6 +81,8 @@
       <SubType>Component</SubType>
     </Compile>
     <Compile Include="HSLColor.cs" />
+    <Compile Include="JsonEvent.cs" />
+    <Compile Include="JsonHandler.cs" />
     <Compile Include="Main.cs">
       <SubType>Form</SubType>
     </Compile>
