--- a/src/Gumshoe Maps/Properties/Settings.settings
+++ b/src/Gumshoe Maps/Properties/Settings.settings
@@ -20,5 +20,8 @@
     <Setting Name="selectedLeague" Type="System.String" Scope="User">
       <Value Profile="(Default)" />
     </Setting>
+    <Setting Name="publicOptIn" Type="System.Boolean" Scope="User">
+      <Value Profile="(Default)">True</Value>
+    </Setting>
   </Settings>
 </SettingsFile>
