updated git ignore for /obj directory

--- a/src/Gumshoe Maps/.gitignore
+++ b/src/Gumshoe Maps/.gitignore
@@ -1,5 +1,6 @@
 bin/Debug/Gumshoe Maps.vshost.exe
 bin/
+obj/
 *.bin
 obj/Debug/DesignTimeResolveAssemblyReferences.cache
 obj/Debug/DesignTimeResolveAssemblyReferencesInput.cache
