--- a/src/Gumshoe Maps/app.config
+++ b/src/Gumshoe Maps/app.config
@@ -36,7 +36,7 @@
   <userSettings>
     <Gumshoe_Maps.Properties.Settings>
       <setting name="themeColor" serializeAs="String">
-        <value>SkyBlue</value>
+        <value>MediumSlateBlue</value>
       </setting>
       <setting name="zanaQuantity" serializeAs="String">
         <value>0</value>
